--- a/templet/fenyuan/css/base_fy.css
+++ b/templet/fenyuan/css/base_fy.css
@@ -99,6 +99,7 @@ input{
 	position:absolute;
 	left:-13px;
 	bottom:-9px;
+	z-index:-1111;
 }
 #header .top .top_nav .nav ul li.hoverd a span{
 	display:block;
