--- a/templet/phone/css/style.css
+++ b/templet/phone/css/style.css
@@ -142,7 +142,7 @@ a {
 .arrow-b {
     position: absolute;
     left: 0;
-    top: 55%;
+    top: 75%;
     width: 100%;
 }
 .arrow-b {
@@ -187,7 +187,8 @@ a {
     padding: 20px;
 }
 .life-ul li {
-    display: inline-block;
+    display: block;
+    margin: 0 auto;
     padding: 0px 0px 0px 0px;
     position: relative;
     overflow: hidden;
