--- a/templet/baoding/css/index.css
+++ b/templet/baoding/css/index.css
@@ -34,6 +34,7 @@
 }
 #content .con_dct1 .kz .jiane p.left img{
 	width:100%;
+	height: 100%;
 }
 #content .con_dct1 .kz .jiane .jianr{
 	width:200px;
